<resources>
    <string name="app_name">Geometric form</string>
    <string name="title">Geometric form</string>
    <string name="geometric_form">Geometric Form</string>
    <string name="base">Base</string>
    <string name="area">Area</string>
    <string name="calculate">Calculate</string>
    <string name="radius">Radius</string>
    <string name="height">Height</string>
    <string name="rectangle">Rectangle</string>
    <string name="triangle">Triangle</string>
    <string name="circle">Circle</string>
    <string name="shape_image">Shape Image</string>
    <string name="next">Next</string>
    <string name="title_activity_resultado">ResultadoActivity</string>
</resources>
